Main menu issue fixed on mobile and desktop both.

--- a/docroot/sites/all/themes/ambitious/sass/general.scss
+++ b/docroot/sites/all/themes/ambitious/sass/general.scss
@@ -1227,14 +1227,17 @@ article.node-223806{
 .nav-holder{
   position: fixed;
 }
-.nav-active .nav-holder{
+.nav-active {
+  overflow-x: hidden;
+  .nav-holder{
   position: absolute;
   padding-top:15px;
   margin-top:34px;
-  @include breakpoint($mobile){
-    padding-top:0px;
+    @include breakpoint($mobile){
+      padding-top:0px;
+    }
   }
-} 
+}
 
 // Login Modal's issue fixing on the mobiles
 @include breakpoint($mobile){
