--- a/docroot/sites/all/themes/ambitious/sass/wrapper.scss
+++ b/docroot/sites/all/themes/ambitious/sass/wrapper.scss
@@ -11,6 +11,7 @@
 	table-layout:fixed;
 	margin-top:143px;
 	transition: margin 0.5s, transform 2s;
+	overflow-x: hidden;
 	@include breakpoint($mobile){
 		margin-top: 175px;
 	}
